--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 flask==2.3.2
-torch==2.5.0
+torch==2.0.1+cpu -f https://download.pytorch.org/whl/cpu/torch_stable.html
 opencv-python-headless==4.7.0.72
 Pillow==9.5.0
 numpy==1.24.3
